# redactr

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  index.html  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  ralph_lisa_loop_poc.md  svelte.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
src/: App.svelte  app.css
src/lib/components/: Canvas.svelte  DetectionPanel.svelte  DropZone.svelte  MobileBottomPanel.svelte  StylePanel.svelte  ThemeToggle.svelte  Toolbar.svelte  ZoomControls.svelte
src/lib/detection/: manager.ts  mediapipe-face.ts  types.ts  worker.ts
src/lib/detection/sota/: index.ts  lisa.ts  openrouter.ts  ralph.ts  types.ts
src/lib/stores/: detection.ts  history.ts  image.ts  settings.ts  sota.ts  theme.ts  zoom.ts
src/lib/stores/__tests__/: history.test.ts  image.test.ts  settings.test.ts  theme.test.ts
src/lib/wasm/: redactor.ts
src/lib/wasm/__tests__/: redactor.test.ts
src/test/: setup.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
