[package]
name = "redactr-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Redactr"]
description = "WASM image processing for Redactr"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "ImageData",
]

[profile.release]
opt-level = 3
lto = true
